--- a/src/locales/ar/common.json
+++ b/src/locales/ar/common.json
@@ -7,6 +7,7 @@
         "privateLabel": "علامة خاصة",
         "contact": "اتصال",
         "shop": "المتجر",
+        "catalogue": "أورغانيكا",
         "benefits": "الفوائد",
         "certifications": "الشهادات",
         "sustainability": "الاستدامة",
