--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -7,6 +7,7 @@
         "privateLabel": "Private label",
         "contact": "Contact",
         "shop": "Shop",
+        "catalogue": "Organica",
         "benefits": "Benefits",
         "certifications": "Certifications",
         "sustainability": "Sustainability",
