feat: Add wholesale section to About page, performance bars to Private Label, improve link styling, and add auto-scrolling certifications carousel
- Add wholesale title/description to About page data and client
- Reduce vertical padding across About and Private Label sections
- Add performance snapshot bars (Projects, Satisfaction, Charges) to Private Label page
- Update link styling: underline by default, thicker on hover in rich text and blog content
- Refactor BlogPostContent link rendering for

--- a/src/locales/ar/about.json
+++ b/src/locales/ar/about.json
@@ -4,6 +4,10 @@
     "subtitle": "مصدركم الموثوق لمنتجات التجميل العضوية المغربية الفاخرة.",
     "description": "توفر شركتنا مجموعة متنوعة من المنتجات والخدمات العضوية المغربية، بما في ذلك حلول العلامات الخاصة لعملائنا في جميع أنحاء العالم. نحن نتعامل مع دول في جميع أنحاء العالم — في أوروبا، آسيا، أمريكا، أستراليا، وأفريقيا."
   },
+  "wholesale": {
+    "title": "بيع بالجملة لمنتجات التجميل العضوية",
+    "description": "توفر شركتنا منتجات عضوية مغربية متنوعة وخدمات تشمل العلامات الخاصة لعملائنا حول العالم. نتعامل مع دول في أوروبا وآسيا وأمريكا وأستراليا وأفريقيا."
+  },
   "whoWeAre": {
     "label": "من نحن",
     "title": "مجموعة أورجانيكا ذ.م.م",
