--- a/src/locales/ar/home.json
+++ b/src/locales/ar/home.json
@@ -284,5 +284,20 @@
         "title": "تابع رحلتنا",
         "description": "خلف كواليس التوريد المستدام، من الحقل إلى الشحن",
         "cta": "تابعنا على إنستغرام"
+    },
+    "professionalCta": {
+        "title": "هل أنت محترف في قطاع التجميل؟",
+        "button": "أدخل الآن!",
+        "href": "/contact"
+    },
+    "vision": {
+        "title": "أورغانيكا المغربية",
+        "paragraphs": [
+            "<strong>زيت الأركان المغربي</strong> هو زيت نباتي يتم إنتاجه بواسطة آلة الضغط البارد من زيت Argania Spinosa Kernel من شجرة الأركان المغربية باستخدام نظام إنتاج مستدام.",
+            "زيت الأرغان مع آلاف الفوائد، وقد عُرف زيت الأرغان المغربي بكونه علاجًا مرطبًا قويًا ومضادًا للأكسدة ومضادًا للالتهابات.",
+            "يُعرف زيت الأركان بفوائده العديدة للشعر والجسم والأظافر لاحتوائه على مستوى عالٍ من الفيتامينات A و E. زيت الأرغان ضروري لحياتنا اليومية حيث يستخدم في التقشير والصابون وكريمات الجسم والتدليك وفي صناعة المستحضرات وكريمات الشفاه والعديد من الاستخدامات الأخرى.",
+            "مهمتنا الرئيسية كشركة مغربية بالجملة لزيت الأرغان هي مشاركة سر الجمال هذا مع عملائنا، باستخدام نظام إنتاج مستدام. لتزويدك بجودة 100٪"
+        ],
+        "image": "/images/slider/moroccan-organica-cooperative (1).webp"
     }
 }
