--- a/src/locales/en/about.json
+++ b/src/locales/en/about.json
@@ -4,6 +4,10 @@
     "subtitle": "Your trusted source for premium Moroccan organic beauty products.",
     "description": "Our company provides different Moroccan organic products and services, including private label solutions for our worldwide customers. We deal with international countries all over the world — in Europe, Asia, America, Australia, and Africa."
   },
+  "wholesale": {
+    "title": "WHOLESALE OF ORGANIC COSMETICS PRODUCTS",
+    "description": "Our company provides different Moroccan organic products, and services including private label for its worldwide customers we deals with international countries all over the world, in Europe, Asia, America, Australia and Africa."
+  },
   "whoWeAre": {
     "label": "Who We Are",
     "title": "Organica Group SARL",
