refactor: update blog form, enhance slug generation, clean up admin UI, and routing cleanup

--- a/src/locales/ar/blog.json
+++ b/src/locales/ar/blog.json
@@ -11,6 +11,11 @@
   "categories": "الأقسام",
   "allCategories": "كل الأقسام",
   "clearFilters": "مسح التصفية",
+  "banner": {
+    "title": "اكتشف مجموعتنا من منتجات العناية بالبشرة والعافية العضوية.",
+    "subtitle": "استكشف مجموعتنا من منتجات العناية بالبشرة والعافية العضوية",
+    "button": "تسوق الآن"
+  },
   "backToBlog": "العودة للمدونة",
   "publishedOn": "نشر في",
   "share": "مشاركة",
@@ -106,6 +111,18 @@
       "articleTitle": "عنوان المقال",
       "titlePlaceholder": "أدخل عنوان المقال...",
       "permanentLink": "الرابط الدائم",
+      "settings": "إعدادات المقال",
+      "category": "الفئة",
+      "selectCategory": "اختر فئة",
+      "tags": "الوسوم",
+      "addTag": "إضافة وسم...",
+      "featuredImage": "الصورة البارزة",
+      "uploadCover": "رفع غلاف",
+      "recommendedSize": "الحجم الموصى به: 1200x630 بكسل. الحد الأقصى 5 ميجابايت.",
+      "seo": "تحسين محركات البحث",
+      "seoTitle": "عنوان SEO",
+      "metaDescription": "الوصف التعريفي",
+      "metaPlaceholder": "ملخص قصير لمحركات البحث...",
       "content": "المحتوى",
       "contentPlaceholder": "في يوم من الأيام في المغرب...",
       "summary": "الملخص",
