--- a/src/locales/ar/home.json
+++ b/src/locales/ar/home.json
@@ -81,8 +81,8 @@
     },
     "categories": {
         "badge": "جملة",
-        "title": "العلامة التجارية لمنتجاتنا",
-        "subtitle": "مباشرة من المصدر في المغرب",
+        "title": "مورد موثق لمكونات التجميل المغربية",
+        "description": "نحن متخصصون في الجمال المغربي الأصيل — نحن شركة مغربية تقدم زيت أركان عالي الجودة بالجملة، مصنوع بتقليد وعناية. نقي 100٪، عضوي، ومصدر أخلاقي — مع خدمات العلامات الخاصة، ودعم التصدير، وأسعار تنافسية.",
         "items": [
             {
                 "title": "زيت الارجان المغربي الاصلي",
@@ -288,7 +288,7 @@
     "professionalCta": {
         "title": "هل أنت محترف في قطاع التجميل؟",
         "button": "أدخل الآن!",
-        "href": "/contact"
+        "href": "/organica"
     },
     "vision": {
         "title": "أورغانيكا المغربية",
