--- a/src/locales/ar/products.json
+++ b/src/locales/ar/products.json
@@ -1,4 +1,7 @@
 {
   "title": "منتجاتنا",
-  "content": "قريباً..."
+  "content": "اكتشف مجموعتنا المختارة من منتجات التجميل والعافية المغربية العضوية الممتازة، والمستمدة مباشرة من قلب المغرب.",
+  "badge": "مجموعة فاخرة",
+  "topSellingTitle": "المنتجات الأكثر مبيعاً",
+  "topSellingSubtitle": "تشكيلاتنا العضوية الأكثر شعبية"
 }
