--- a/src/locales/en/blog.json
+++ b/src/locales/en/blog.json
@@ -11,6 +11,11 @@
   "categories": "Categories",
   "allCategories": "All Categories",
   "clearFilters": "Clear Filters",
+  "banner": {
+    "title": "DISCOVER OUR COLLECTION OF ORGANIC SKINCARE AND WELLNESS PRODUCTS.",
+    "subtitle": "Explore our collection of organic skincare and wellness products",
+    "button": "Shop Now"
+  },
   "backToBlog": "Back to Blog",
   "publishedOn": "Published on",
   "share": "Share",
@@ -106,6 +111,18 @@
       "articleTitle": "Article Title",
       "titlePlaceholder": "Enter article title...",
       "permanentLink": "Permanent Link",
+      "settings": "Article Settings",
+      "category": "Category",
+      "selectCategory": "Select a category",
+      "tags": "Tags",
+      "addTag": "Add a tag...",
+      "featuredImage": "Featured Image",
+      "uploadCover": "Upload Cover",
+      "recommendedSize": "Recommended size: 1200x630px. Max 5MB.",
+      "seo": "SEO Optimization",
+      "seoTitle": "SEO Title",
+      "metaDescription": "Meta Description",
+      "metaPlaceholder": "Brief summary for search engines...",
       "content": "Content",
       "contentPlaceholder": "Once upon a time in Morocco...",
       "summary": "Summary / Excerpt",
