--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -101,23 +101,23 @@
                 "items": [
                     {
                         "name": "high-quality ARGAN OILS CERTIFIED ORGANIC",
-                        "href": "/products"
+                        "href": "/organica"
                     },
                     {
                         "name": "organic prickly pear seeds Oil wholesale",
-                        "href": "/products"
+                        "href": "/organica"
                     },
                     {
                         "name": "ORGANIC MOROCCAN BLACK SOAP Wholesale",
-                        "href": "/products"
+                        "href": "/organica"
                     },
                     {
                         "name": "PURE natural organic Damascena rose water",
-                        "href": "/products"
+                        "href": "/organica"
                     },
                     {
                         "name": "MOROCCAN powder CLAY GHASSOUL",
-                        "href": "/products"
+                        "href": "/organica"
                     }
                 ]
             }
