--- a/src/locales/en/products.json
+++ b/src/locales/en/products.json
@@ -1,4 +1,7 @@
 {
   "title": "Our Products",
-  "content": "Coming Soon..."
+  "content": "Discover our collection of premium organic Moroccan beauty and wellness products, sourced directly from the heart of Morocco.",
+  "badge": "Premium Collection",
+  "topSellingTitle": "Best Selling Products",
+  "topSellingSubtitle": "Our most popular organic selections"
 }
