Update product properties and UI components

--- a/src/locales/ar/common.json
+++ b/src/locales/ar/common.json
@@ -101,23 +101,23 @@
                 "items": [
                     {
                         "name": "زيت الارجان المغربي الاصلي بالجملة",
-                        "href": "/organica"
+                        "href": "/wholesale-of-moroccan-skincare"
                     },
                     {
                         "name": "زيت التين الشوكي الاصلي بالجملة",
-                        "href": "/organica"
+                        "href": "/wholesale-of-moroccan-skincare"
                     },
                     {
                         "name": "الصابون البلدي المغربي بالجملة",
-                        "href": "/organica"
+                        "href": "/wholesale-of-moroccan-skincare"
                     },
                     {
                         "name": "ماء الورد المغربي طبيعي %100",
-                        "href": "/organica"
+                        "href": "/wholesale-of-moroccan-skincare"
                     },
                     {
                         "name": "الطين المغربي بني - اخضر - احمر",
-                        "href": "/organica"
+                        "href": "/wholesale-of-moroccan-skincare"
                     }
                 ]
             }
