feat: optimize homepage headings, improve SEO links, and move about page to new organica route

--- a/src/locales/ar/home.json
+++ b/src/locales/ar/home.json
@@ -110,7 +110,7 @@
         "badge": "مجموعة منتجاتنا",
         "title": "المنتجات",
         "highlight": "الأكثر مبيعًا",
-        "description": "اكتشف تشكيلتنا المختارة من المكونات العضوية المعتمدة، والتي يتم الحصول عليها مباشرة من التعاونيات والمزارع الحرفية المغربية.",
+        "description": "",
         "cta": "اطلب كتالوج المنتجات الكامل",
         "subtitle": "مباشرة من المصدر في المغرب",
         "viewAll": "مشاهدة جميع المنتجات",
