--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -46,20 +46,20 @@
                         "href": "/blog"
                     },
                     {
-                        "name": "Moroccan Nila powder benefits",
-                        "href": "/blog"
+                        "name": "Trusted Moroccan Beauty Ingredient Supplier",
+                        "href": "/blog/trusted-moroccan-beauty-ingredient-supplier-2026-guide"
                     },
                     {
-                        "name": "Argan oil for hair",
-                        "href": "/blog"
+                        "name": "Benefits of Moroccan Indigo (Nila) Powder",
+                        "href": "/benefits/moroccan-indigo-powder-benefits"
                     },
                     {
-                        "name": "Prickly pear seed oil benefits",
-                        "href": "/blog"
+                        "name": "The Wonders of Moroccan Argan Oil",
+                        "href": "/benefits/argan-oil-benefits"
                     },
                     {
-                        "name": "The magic of Moroccan beauty products",
-                        "href": "/blog"
+                        "name": "Pure Prickly Pear Seed Oil Guide",
+                        "href": "/benefits/prickly-pear-seed-oil-benefits"
                     }
                 ]
             },
