--- a/src/locales/en/home.json
+++ b/src/locales/en/home.json
@@ -110,7 +110,7 @@
         "badge": "Our Product Range",
         "title": "TOP SELLING",
         "highlight": "PRODUCTS",
-        "description": "We specialize in authentic Moroccan beauty — We are a Moroccan company offering premium bulk Argan oil, crafted with tradition and care. 100% pure, organic, and ethically sourced — with private label services, export support, and competitive pricing.",
+        "description": "",
         "cta": "Request Full Product Catalog",
         "subtitle": "Directly from the source in Morocco",
         "viewAll": "View All Products",
