Add CertificationSlider to static pages, update Home Professional CTA, and refine Argan Oil stats UI

--- a/src/locales/ar/common.json
+++ b/src/locales/ar/common.json
@@ -68,19 +68,19 @@
                 "items": [
                     {
                         "name": "سياسة الخصوصية",
-                        "href": "/privacy-policy"
+                        "href": "/ar/organica/privacy-policy"
                     },
                     {
                         "name": "معلومات التوصيل",
-                        "href": "/delivery-information"
+                        "href": "/ar/organica/delivery-information"
                     },
                     {
                         "name": "شروط الاستخدام",
-                        "href": "/terms-conditions"
+                        "href": "/ar/organica/terms-conditions"
                     },
                     {
                         "name": "كيفية الطلب / الدفع",
-                        "href": "/how-to-order-pay"
+                        "href": "/ar/organica/how-to-order-pay"
                     },
                     {
                         "name": "مراقبة الجودة",
