--- a/src/locales/ar/home.json
+++ b/src/locales/ar/home.json
@@ -288,7 +288,7 @@
     "professionalCta": {
         "title": "هل أنت محترف في قطاع التجميل؟",
         "button": "أدخل الآن!",
-        "href": "/organica"
+        "href": "/organica/argan-oil-of-morocco"
     },
     "vision": {
         "title": "أورغانيكا المغربية",
