--- a/src/locales/en/home.json
+++ b/src/locales/en/home.json
@@ -272,7 +272,7 @@
     "professionalCta": {
         "title": "YOU ARE A PROFESSIONAL IN THE COSMETIC SECTOR ?",
         "button": "ENTER NOW!",
-        "href": "/organica"
+        "href": "/organica/argan-oil-of-morocco"
     },
     "privateLabel": {
         "badge": "Our Services",
