refactor: convert hero carousel headings to uppercase and update slide copy for clarity

--- a/src/locales/en/home.json
+++ b/src/locales/en/home.json
@@ -21,26 +21,26 @@
             },
             {
                 "badge": "Fast Shipping",
-                "heading": "We Ship Organic Products to the",
+                "heading": "We Can Ship Our Organic Products to the",
                 "highlight": "USA",
                 "description": "We are able to ship our argan oil by air cargo worldwide with a short transit time."
             },
             {
                 "badge": "Premium Quality",
                 "heading": "Pure Prickly Pear Seed Oil",
-                "highlight": "Suppliers",
+                "highlight": "Wholesale Suppliers",
                 "description": "High grade cosmetic Prickly pear cactus seeds oil production."
             },
             {
                 "badge": "Mineral Rich",
-                "heading": "Moroccan Rhassoul Clay",
+                "heading": "Moroccan Rhassoul Clay in Powder",
                 "highlight": "100% Organic",
                 "description": "Moroccan Rhassoul clay is the best organic solution to keep your face and skin clean and soft."
             },
             {
                 "badge": "Traditional Spa",
                 "heading": "Moroccan Black Soap",
-                "highlight": "Wholesale",
+                "highlight": "Wholesale in Africa",
                 "description": "Moroccan BLACK SOAP with vitamin E is the best organic solution to keep your face and skin clean and soft."
             }
         ],
