feat: add French translations for benefits, organica pages, and enhance search with multilingual support

--- a/src/locales/ar/private-label.json
+++ b/src/locales/ar/private-label.json
@@ -22,6 +22,15 @@
     "description1": "تعد منتجات التجميل العضوية المغربية من بين أفضل الخيارات للتميز في السوق. إذا كنت تبحث عن منتجات عالية الجودة وصديقة للبشرة والشعر تستمد قوتها من البيئة المغربية، فإن منتجاتنا هي الخيار الأمثل.",
     "description2": "نقدم لك الفرصة لإطلاق علامتك التجارية الخاصة من منتجات التجميل المغربية الطبيعية، التي تتميز بتركيباتها الفعالة ومكوناتها العضوية 100%، مما يجعلها مناسبة لجميع أنواع البشرة والشعر."
   },
+  "performanceSnapshot": {
+    "label": "ملخص الأداء",
+    "title": "ما يقدره شركاؤنا",
+    "bars": [
+      { "label": "مشاريع منجزة" },
+      { "label": "رضا العملاء" },
+      { "label": "أقل الرسوم" }
+    ]
+  },
   "expertise": {
     "label": "خبرتنا",
     "title": "لماذا تختار منتجات التجميل العضوية المغربية؟",
