--- a/src/locales/en/about.json
+++ b/src/locales/en/about.json
@@ -127,7 +127,7 @@
   "partnership": {
     "label": "Partner With Us",
     "title": "Wholesale Opportunities",
-    "description": "Whether you're a small business or a large retailer, we offer competitive wholesale prices and flexible shipping options to suit your needs. Join us in spreading the beauty of organic Moroccan products to the world.",
+    "description": "Whether you're a small business or a large retailer, we offer competitive wholesale prices and flexible shipping options to suit your needs. Our team ensures timely deliveries, high-quality products, and personalized service for each wholesale partner. Join us in spreading the beauty of organic Moroccan products to the world. Get in touch today to explore our wholesale offerings and bring authentic Moroccan beauty to your customers!",
     "cta": "Get in Touch"
   }
 }
